# trace-ros-connector

example-action-server/: package.xml  setup.cfg  setup.py
example-action-server/example_action_server/: example_action_server.py
example-msgs/: CMakeLists.txt  package.xml
example-msgs/action/: ExampleAction.action
example-ros-connector/: CMakeLists.txt  README.md  package.xml
example-ros-connector/config/: resource_action_list.xml
example-ros-connector/include/example_ros_connector/: connector.h  example_action_translator.h  ros_action_clients.h  service_task_interface.h  specific_client.h
example-ros-connector/publisher/: incremental_publisher.cc
example-ros-connector/src/: action_client_factory.cc  connector.cc  example_action_translator.cc  specific_client.cc
