<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_action_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="anna.m.sabel@jpl.nasa.gov">Anna</maintainer>
  <maintainer email="kasparav@jpl.nasa.gov">Gabriele</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>example_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
