<?xml version="1.0"?>
<package format="3">
  <name>example_msgs</name>
  <version>1.0.0</version>
  <description>The example_msgs package</description>

  <maintainer email="anna.m.sabel@jpl.nasa.gov">Anna</maintainer>
  <maintainer email="kasparav@jpl.nasa.gov">Gabriele</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



