<?xml version="1.0"?>
<package format="3">
  <name>trace_example_ros_connector</name>
  <version>0.0.1</version>
  <description>The trace example ROS connector package</description>
  <maintainer email="anna.m.sabel@jpl.nasa.gov">Anna</maintainer>
  <maintainer email="kasparav@jpl.nasa.gov">Gabriele</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>rclcpp</depend>
  <depend>trace_executive</depend>
  <depend>example_msgs</depend>
  <depend>rclcpp_action</depend>
  
  <!-- <depend>trace_ros_msgs_autocoder</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
